Aggiunti celle notebook per la LNN_V2

--- a/Progetto/LNN_V2/LNN.ipynb
+++ b/Progetto/LNN_V2/LNN.ipynb
@@ -5,7 +5,17 @@
    "id": "db3be638",
    "metadata": {},
    "source": [
-    "## LNN Addestramento"
+    "# Modello LNN (Liquid Neural Network) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "242cae71",
+   "metadata": {},
+   "source": [
+    "### Codice di Configurazione e Pre-Elaborazione per LNN\n",
+    "Questo blocco di codice svolge due funzioni principali: prepara l'ambiente di calcolo, ottimizzando l'uso della GPU con TensorFlow, e definisce i parametri cruciali per la lettura dei dati e la costruzione del modello LNN (Liquid Neural Network) per la previsione \n",
+    "delle traiettorie.\n"
    ]
   },
   {
@@ -82,7 +92,16 @@
    "id": "ca6e9543",
    "metadata": {},
    "source": [
-    "#### Funzioni"
+    "### Funzioni del Data Generator\n",
+    "Queste funzioni agiscono come una \"fabbrica di dati just-in-time\", alimentando la rete neurale (LNN) con piccoli batch di sequenze temporali, letti e processati al volo.\n",
+    "Le funzioni usate sono due:\n",
+    "1. `create_windows`(Sliding Window): Trasforma una lunga traiettoria continua in una serie di finestre sovrapposte di lunghezza WINDOW_SIZE\n",
+    "\n",
+    "2. `data_generator`: \n",
+    "    * **Lettura a Chunk:** I file Parquet vengono letti in blocchi da 500.000 righe per volta\n",
+    "    * **Ricostruzione delle Traiettorie (Stitching)**: Una singola traiettoria (ID nave) potrebbe essere tagliata a metà tra la fine di un chunk e l'inizio del successivo (o tra due file). Il generatore utilizza dei buffer intelligenti (chunk_buffer, file_buffer) per \"cucire\" insieme questi pezzi. Se una traiettoria è incompleta alla fine di un blocco, viene conservata in memoria e completata con i dati del blocco successivo, garantendo che nessuna sequenza temporale venga spezzata artificialmente.\n",
+    "    * **Normalizzazione:** I dati vengono normalizzati usando lo scaler pre-addestrato man mano che vengono caricati.\n",
+    "    * **Output per Autoencoder**"
    ]
   },
   {
@@ -167,7 +186,7 @@
    "id": "e638a97e",
    "metadata": {},
    "source": [
-    "#### Scaler e Generatori"
+    "### Caricamento Scaler e creazione dei Generatori"
    ]
   },
   {
@@ -214,7 +233,29 @@
    "id": "8ab9bd18",
    "metadata": {},
    "source": [
-    "#### Modello LNN"
+    "### Definizione del Modello LNN Autoencoder\n",
+    "In questa sezione costuiamo un Autoencoder basato su Liquid Neural Networks. Q introduciamo due concetti rivoluzionari: **le Celle Liquide (CfC)** e il **Wiring Sparso (AutoNCP)**.\n",
+    "\n",
+    "1. **Il Concetto di \"Wiring\" (Cablaggio Neurale)**\n",
+    "Nelle reti neurali classiche (Dense o LSTM standard), ogni neurone è collegato a tutti gli altri. Questo è potente ma inefficiente e diverso da come funziona un cervello biologico.\n",
+    "\n",
+    "   * `AutoNCP(latent_dim, output_dim)`: Questa funzione genera una architettura di connessione sparsa. Invece di un blocco denso e uniforme, crea una struttura interna di neuroni collegati in modo specifico. Questo riduce il numero di sinapsi attive, rendendo il modello più robusto al rumore e più interpretabile.\n",
+    "2. **L'Encoder Liquido (Compressione)**\n",
+    "\n",
+    "   * **Input:** La finestra temporale di traiettoria (`WINDOW_SIZE`).\n",
+    "\n",
+    "   * **Layer CfC (Closed-form Continuous-time)**: Questa cella risolve un'equazione differenziale nel tempo. Non vede i dati come \"passi\" separati, ma come un flusso continuo.\n",
+    "      * **Configurazione:** `return_sequences=False` indica che vogliamo solo lo stato finale. \n",
+    "      `mixed_memory=True` abilita un meccanismo di memoria a lungo termine combinato con la dinamica liquida, permettendo al modello di ricordare eventi passati lontani nel tempo.\n",
+    "\n",
+    "   * **Risultato:** Un Vettore Latente che cattura la \"fisica\" e l'intenzione della manovra.\n",
+    "3. **Il Decoder Liquido (Ricostruzione)**\n",
+    "\n",
+    "   * `RepeatVector`: Come nell'Autoencoder classico, replica il vettore latente per prepararlo alla decodifica temporale.\n",
+    "\n",
+    "   * **Layer CfC (Decoder)**: Un seconda cella liquida prende il concetto astratto e lo \"srotola\" nel tempo (`return_sequences=True`). Grazie alla **matematica delle equazioni differenziali**, questo decoder è particolarmente abile nel generare curve lisce e realistiche, evitando i movimenti a scatti tipici delle reti discrete.\n",
+    "4. **Output**\n",
+    "   * `TimeDistributed(Dense)`: Riporta i calcoli interni dello spazio latente alle dimensioni originali (Latitudine, Longitudine, Velocità, Rotta) per ogni istante temporale "
    ]
   },
   {
@@ -286,7 +327,15 @@
    "id": "decce365",
    "metadata": {},
    "source": [
-    "#### Addestramento LNN"
+    "### Addestramento LNN\n",
+    "Poiché la rete deve risolvere equazioni differenziali a ogni passo, il \"paesaggio\" dell'errore può essere molto frastagliato. Per garantire la convergenza e la stabilità, utilizziamo una strategia di ottimizzazione avanzata:\n",
+    "\n",
+    "1. **Learning Rate Dinamico (Cosine Decay with Restarts):**\n",
+    "  Invece di usare un tasso di apprendimento fisso, utilizziamo uno scheduler `CosineDecayRestarts`. Il Learning Rate inizia alto, scende seguendo una curva coseno (per raffinare la ricerca), e poi \"riparte\" (Restart) improvvisamente verso l'alto. Questo meccanismo aiuta la rete a \"saltare fuori\" dai minimi locali (soluzioni mediocri in cui la rete potrebbe incastrarsi) e a esplorare nuove aree di soluzione ottimali.\n",
+    "\n",
+    "2. **Stabilizzazione del Gradiente (Gradient Clipping):** Le reti basate su equazioni differenziali (come le CfC) possono soffrire di *Gradient Explosion* (i numeri diventano troppo grandi durante il calcolo e mandano in crash l'addestramento). Il parametro `clipvalue=0.5 `\"taglia\" qualsiasi gradiente superiore a 0.5, mantenendo l'addestramento stabile e sicuro.\n",
+    "\n",
+    "3. **Salvataggio Pesi (Weights Only):** Usiamo `save_weights_only=True`. Poiché stiamo usando layer personalizzati complessi (CfC, AutoNCP) della libreria ncps, salvare l'intero modello in un unico file .keras può talvolta generare errori di serializzazione. Salvare solo i pesi numerici è una pratica più sicura e robusta per questo tipo di architetture sperimentali. \n"
    ]
   },
   {
