--- a/Progetto/LNN_V2/Test.ipynb
+++ b/Progetto/LNN_V2/Test.ipynb
@@ -9,6 +9,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb1fca8a",
+   "metadata": {},
+   "source": [
+    "### Configurazione dell'Ambiente per l'Analisi e la Valutazione\n",
+    "Questo codice prepara l'ambiente di lavoro assicurando che tutte le risorse software e hardware siano pronte per caricare il modello LNN addestrato e per eseguire l'analisi sui dati di test, senza nessun attacco "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7eec3f3d",
@@ -77,6 +86,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8c5d35d",
+   "metadata": {},
+   "source": [
+    "### Preparazione Risorse di Test: Scaler e Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f6448c84",
@@ -106,6 +123,24 @@
     "print(f\"File totali trovati: {len(all_files)}\")\n",
     "print(f\"File selezionati per il TEST: {len(TEST_FILES)}\")\n",
     "print(TEST_FILES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ee9f1d9",
+   "metadata": {},
+   "source": [
+    "### Analisi Post-Addestramento: Curve di Apprendimento (LNN)\n",
+    "Questa sezione è dedicata alla diagnostica del processo di training. Carichiamo i dati storici salvati nel file training_log_lnn.csv e visualizziamo l'andamento dell'errore (MAE) per capire come la Liquid Neural Network ha imparato nel tempo.\n",
+    "\n",
+    "Il grafico mostra un comportamento in due fasi distinte:\n",
+    "\n",
+    "1. **Fase di Apprendimento Efficace (Epoche 0-16)**: \n",
+    "   Per la stragrande maggioranza del tempo, l'addestramento è stato eccellente. Sia la **Training Loss** (blu) che la **Validation Loss** (arancione) scendono rapidamente e si stabilizzano su valori molto bassi *(sotto 0.1)*.Le due linee sono quasi sovrapposte: questo indica che non c'è overfitting. La LNN sta generalizzando perfettamente, imparando la fisica delle navi e non solo memorizzando i dati.\n",
+    "\n",
+    "2. **Gradient Explosion (Epoca 17)**: Proprio alla fine, si nota un picco verticale improvviso. L'errore schizza da $\\approx 0.02$ a oltre 1.75 in una sola epoca. Questo fenomeno è noto come *Gradient Explosion*. È un evento che può capitare con le LNN quando i pesi interni raggiungono una configurazione che rende la risoluzione dell'equazione differenziale instabile per certi input.\n",
+    "\n",
+    "**Conclusione:** Nonostante il \"crash\" finale, l'addestramento è un successo. Grazie al callback `ModelCheckpoint(save_best_only=True)`, **abbiamo salvato i pesi del modello quando l'errore era al minimo** (probabilmente attorno all'Epoca 15 o 16), ignorando totalmente l'ultima epoca corrotta. Possiamo procedere con i test usando la versione migliore e stabile del modello."
    ]
   },
   {
@@ -141,6 +176,15 @@
     "    \n",
     "except FileNotFoundError:\n",
     "    print(\"File di log non trovato. Hai eseguito l'addestramento?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0639bce2",
+   "metadata": {},
+   "source": [
+    "### Definizione delle Funzioni del Data Generator\n",
+    "Queste funzioni lavorano insieme per rendere l'addestramento del modello LNN su un dataset molto grande possibile, efficiente e accurato, fornendo sequenze temporali complete, garantendo al contempo che l'addestramento sia correttamente dimensionato. Abbiamo un ulteriore funzione `calculate_steps_per_epoch`, che serve per la pianificazione dell'Epoca. "
    ]
   },
   {
@@ -260,6 +304,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a2bee19",
+   "metadata": {},
+   "source": [
+    "### Ricostruzione Architettura e Caricamento Pesi\n",
+    "In questa fase dobbiamo ricreare l'esatta struttura della rete neurale utilizzata durante l'addestramento. Poiché abbiamo scelto di salvare solo i pesi (per efficienza e sicurezza con i layer custom ncps), non possiamo usare la funzione standard `load_model`. Procediamo quindi in due step: Ricostruzione dello Scheletro e Caricamento dei Pesi."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "b810b5b3",
@@ -310,6 +363,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ae9ecea",
+   "metadata": {},
+   "source": [
+    "### Test Quantitativo\n",
+    "In questa fase configuriamo il meccanismo di alimentazione dei dati per la valutazione quantitativa. Poiché stiamo testando il modello su dati nuovi, dobbiamo assicurarci di processare ogni singola traiettoria esattamente una volta, senza ripetizioni e nell'ordine corretto.\n",
+    "\n",
+    "1. Calcolo Esatto della Volumetria (`calculate_steps_per_epoch`)\n",
+    "2. Istanziazione del Generatore (`data_generator_v`)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "96826564",
@@ -344,6 +409,19 @@
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle_files=False\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a0b34cb",
+   "metadata": {},
+   "source": [
+    "### Misurazione dell'Errore di Ricostruzione (MAE)\n",
+    "Questo blocco di codice avvia il processo di valutazione su tutto il dataset di test. A differenza della fase di training, qui i pesi del modello sono congelati: la LNN sta operando in pura inferenza. Al termine del processo, otteniamo un singolo numero: **il Mean Absolute Error (MAE) globale.**\n",
+    "\n",
+    "**Risultato Ottenuto:** Abbiamo registrato un MAE di **0.00790.**\n",
+    "\n",
+    "**Interpretazione:** Questo valore è eccezionalmente basso. Significa che, in media, l'errore che la rete commette nel ricostruire una traiettoria \"normale\" è trascurabile (meno dell'1%). Questo stabilisce una Baseline molto solida: il modello ha compreso a fondo la fisica delle navi, il che lo renderà estremamente sensibile nel rilevare qualsiasi anomalia che si discosti anche di poco da questo standard di perfezione."
    ]
   },
   {
@@ -382,6 +460,36 @@
     "print(f\"RISULTATO FINALE LNN:\")\n",
     "print(f\"Mean Absolute Error (MAE): {test_loss:.5f}\")\n",
     "print(\"-\" * 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92ba48c2",
+   "metadata": {},
+   "source": [
+    "### Test Qualitativo\n",
+    "Questo step è cruciale per capire \"come\" la Liquid Neural Network sta ragionando. L'obiettivo è confrontare la traiettoria reale (sporca, rumorosa, discreta) con quella ricostruita dalla LNN (il modello fisico appreso).\n",
+    "\n",
+    "1. **Metodologia**\n",
+    "   * **Estrazione:** Preleviamo un batch casuale dal set di test.\n",
+    "\n",
+    "   * **Infernza:** L'Autoencoder LNN comprime e ricostruisce le sequenze.\n",
+    "\n",
+    "   * **Denormalizzazione:** Riportiamo i dati alle unità di misura reali (Nodi per la velocità, Gradi per la rotta) per renderli interpretabili. \n",
+    "\n",
+    "2. **Analisi dei Grafici:** Osservando le 3 navi estratte casualmente, notiamo comportamenti molto specifici legati alla natura \"liquida\" del modello:\n",
+    "\n",
+    "   * **Dinamica della Velocità (SOG - Colonna Sinistra):**\n",
+    "\n",
+    "     * Il Dato Reale (Blu): Appare spesso \"a gradini\" o squadrato (es. salti netti da 9.0 a 9.1 nodi). Questo è il rumore di quantizzazione tipico dei sensori digitali.\n",
+    "\n",
+    "     * La Ricostruzione LNN (Rosso): La linea rossa non copia i gradini. Invece, disegna una curva continua e morbida che passa attraverso i punti medi.\n",
+    "\n",
+    "     * Conclusione: La LNN sta agendo come un filtro fisico potente. Ha \"capito\" che una nave massiccia non cambia velocità a scatti, ma ha un'inerzia fluida. Sta modellando il tempo continuo, ignorando il rumore digitale.\n",
+    "\n",
+    "   * **Dinamica della Rotta (COG - Colonna Destra):** Anche nelle virate complesse, la LNN segue il trend con grande precisione. Si nota una leggera \"smussatura\" nei picchi più estremi: questo è positivo, indica che il modello non sta facendo overfitting sul rumore ad alta frequenza, ma sta catturando la manovra macroscopica essenziale.\n",
+    "\n",
+    "**Verdetto:** La capacità della LNN di interpolare una dinamica continua a partire da dati discreti e rumorosi è evidente. La ricostruzione è fisicamente più plausibile del dato grezzo stesso."
    ]
   },
   {
@@ -451,6 +559,31 @@
     "\n",
     "plt.suptitle(f\"Confronto Dinamica su {num_esempi} Navi Casuali\", fontsize=16)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab0c7835",
+   "metadata": {},
+   "source": [
+    "### Validazione Avanzata: Correlazione Statistica e Stabilità Temporale\n",
+    "Dopo aver ispezionato visivamente alcuni esempi, eseguiamo un'analisi statistica più rigorosa su un intero batch di test (es. 256 navi contemporaneamente). Questo ci permette di verificare che le buone performance non siano casi isolati.\n",
+    "\n",
+    "1. **Confrontiamo ogni singolo punto dati reale ($x$) con la sua predizione ($y$).**\n",
+    "   * **Analisi Velocità (SOG - Blu)**: La nuvola di punti è estremamente stretta e allineata alla diagonale. Questo conferma che la LNN ha \"capito\" la velocità quasi alla perfezione.\n",
+    "\n",
+    "   * **Analisi Rotta (COG - Verde)**: Anche qui l'allineamento è ottimo. Si nota una leggerissima dispersione maggiore rispetto alla velocità, il che è normale (la rotta è una variabile più rumorosa), ma la correlazione rimane fortissima.\n",
+    "\n",
+    "2. **Stabilità della Ricostruzione nel Tempo (MAE per Step)** Il secondo grafico risponde alla domanda: \"Il modello perde precisione man mano che la predizione avanza nel tempo?\" \n",
+    "    * Tracciamo l'errore medio per ogni step temporale da 1 a 30.\n",
+    "\n",
+    "    * Risultato: Le curve sono sorprendentemente piatte.\n",
+    "\n",
+    "       * Posizione (Blu/Arancione): L'errore è praticamente nullo e costante.\n",
+    "\n",
+    "       * Dinamica (Verde/Rosso): L'errore è basso e stabile. Non c'è deriva (drift) dell'errore verso la fine della sequenza (step 30).\n",
+    "\n",
+    "    * Conclusione: La natura ricorrente e stabile delle celle liquide permette di mantenere la coerenza della predizione lungo tutta la finestra temporale, senza \"dimenticare\" l'inizio o divergere alla fine."
    ]
   },
   {
@@ -538,6 +671,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82836a58",
+   "metadata": {},
+   "source": [
+    "### Test di Robustezza: Denoising e Stabilità alle Perturbazioni\n",
+    "Questo test è fondamentale per valutare una delle promesse principali delle Liquid Neural Networks: la robustezza al rumore. Essendo basate su equazioni differenziali che evolvono nel tempo continuo, le LNN dovrebbero agire come dei filtri naturali, ignorando le oscillazioni brusche e mantenendo la traiettoria stabile.\n",
+    "\n",
+    "1. **Procedura del Test**\n",
+    "   * Selezione: Estraiamo una traiettoria pulita e reale (`clean_traj`) dal set di test.\n",
+    "\n",
+    "   * Iniezione di Rumore: Aggiungiamo rumore gaussiano artificiale ai dati. Questo simula un sensore GPS difettoso o degradato dalle condizioni atmosferiche, dove la posizione rilevata \"salta\" in modo caotico attorno alla posizione reale.\n",
+    "\n",
+    "   * Inferenza: Chiediamo alla LNN di ricostruire la rotta partendo solo dai dati rumorosi.\n",
+    "\n",
+    "2. **Analisi del Grafico (LNN vs Rumore)** Il grafico confronta tre elementi:\n",
+    "   1. Verde (Realtà): La rotta vera e pulita.\n",
+    "   2. Blu (Input Rumoroso): La nuvola di punti dispersi che la rete riceve in input.\n",
+    "   3. Rosso (Ricostruzione LNN): La risposta della rete.\n",
+    "\n",
+    "**Risultato:** La linea rossa della LNN è sorprendentemente fluida e stabile. A differenza delle reti classiche che potrebbero tentare di \"inseguire\" i singoli punti blu (creando una linea a zig-zag), la LNN ignora il rumore ad alta frequenza. Grazie alla sua costante di tempo interna ($\\tau$), la cella liquida non può cambiare stato istantaneamente, quindi \"filtra\" via il caos e restituisce una traiettoria che approssima fedelmente il movimento fisico reale della nave."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "e2965f42",
@@ -591,6 +747,28 @@
     "plt.axis('equal')\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f61e799",
+   "metadata": {},
+   "source": [
+    "### Calibrazione Statistica a Doppia Soglia (Dual-Threshold)\n",
+    "In questa fase, passiamo da un rilevamento generico (basato sul MAE totale) a un sistema di rilevamento semantico e mirato. L'intuizione è che un attacco GPS (es. teletrasporto) genera un tipo di errore diverso rispetto a un attacco di manovra impossibile (es. cambio velocità istantaneo). Per distinguere queste minacce, calibriamo due soglie indipendenti.\n",
+    "\n",
+    "1. **Il Processo di Calibrazione:**\n",
+    "Il codice analizza un campione significativo del set di test (circa il 10%) composto solo da traiettorie normali. Per ogni traiettoria, calcola due punteggi di errore separati:\n",
+    "     * **Score Dinamico:** Misura l'errore sulle variabili di movimento (**Velocità SOG e Rotta COG**).\n",
+    "     * **Score Fisico:** Misura l'errore sulla posizione geografica (**Latitudine e Longitudine**), convertito in Miglia Nautiche.\n",
+    "\n",
+    "2. **La Regola dei 3-Sigma** ($3\\sigma$): Per entrambe le metriche, calcoliamo la soglia di anomalia usando la formula statistica robusta:$$Threshold = \\mu + 3\\sigma$$Questo definisce il limite oltre il quale un errore è statisticamente impossibile per una traiettoria normale (copre il 99.7% dei casi leciti).\n",
+    "\n",
+    "3. **Risultati della Calibrazione:** L'esecuzione ha prodotto due valori critici che useremo nel rilevatore finale:\n",
+    "\n",
+    "    * **Soglia Dinamica (0.0818)**: Qualsiasi traiettoria che supera questo errore di velocità/rotta sarà etichettata come \"Manovra Impossibile\".\n",
+    "\n",
+    "    * **Soglia Fisica (6.93 NM)**: Qualsiasi traiettoria che devia dalla posizione prevista di oltre ~7 miglia nautiche sarà etichettata come \"Anomalia di Posizione\" (es. Spoofing/Teletrasporto).\n"
    ]
   },
   {
@@ -657,6 +835,34 @@
     "print(f\"2. SOGLIA FISICA (Lat/Lon):    {thresh_phys:.6f} (Miglia Nautiche)\")\n",
     "print(f\"   (Rileva teletrasporti o spoofing posizione)\")\n",
     "print(\"-\" * 40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6590cdcf",
+   "metadata": {},
+   "source": [
+    "### Rilevamento Avanzato \"Physics-Informed\" (Il Doppio Giudice)\n",
+    "In questa sezione implementiamo il sistema di rilevamento che supera i limiti del semplice MAE. L'idea è utilizzare due \"giudici\" complementari per valutare ogni traiettoria: uno che guarda la coerenza interna del movimento (Giudice Dinamico) e uno che guarda la coerenza spaziale assoluta (Giudice Fisico).\n",
+    "\n",
+    "1. **Il Concetto di Ricostruzione Fisica** (`physics_reconstruction`): Questa funzione è il cuore del controllo. Invece di fidarsi ciecamente della posizione predetta dalla rete, la ricarcoliamo usando le leggi della fisica **(Dead Reckoning)**:\n",
+    "   * Prendiamo il punto di partenza reale ($Lat_{t-1}, Lon_{t-1}$).\n",
+    "   * Prendiamo la Velocità ($SOG$) e la Rotta ($COG$) predette dalla LNN.\n",
+    "   * Calcoliamo matematicamente dove dovrebbe essere la nave al tempo $t$ se avesse davvero viaggiato a quella velocità e rotta.\n",
+    "   * Risultato: Otteniamo una \"Posizione Calcolata\" che è fisicamente vincolata alla dinamica.\n",
+    "\n",
+    "2. **Calcolo degli Score Ottimizzati** (`calculate_optimized_scores`): Confrontando i dati reali, predetti e calcolati, generiamo due punteggi di anomalia:\n",
+    "      * **Score Dinamico**(Coerenza Interna): Misura quanto la velocità e la rotta della nave sono \"strane\" o incoerenti rispetto alla storia passata.Abbiamo inserito dei **pesi ottimizzati ($w_{sog}$, $w_{cog}$)** per rendere il sistema ipersensibile agli errori di rotta (fondamentale per rilevare attacchi sottili come il **Ghost Ship o il Drift**).\n",
+    "\n",
+    "      * **Score Fisico** (Coerenza Spaziale): Misura la distanza in Miglia Nautiche tra dove la nave dice di essere (**GPS Reale**) e dove la fisica dice che dovrebbe essere (**Posizione Calcolata**). Se questo errore è alto, significa che la nave si è \"teletrasportata\" o che la posizione GPS è falsa, perché è impossibile raggiungere quel punto con quella velocità.\n",
+    "\n",
+    "3. **Simulazione di Attacchi Complessi:** Per provare che il sistema funziona, non usiamo attacchi banali, ma simulazioni avanzate:\n",
+    "   * **Speed Spoofing:** Iniezione di rumore forte sulla velocità per rompere la fluidità temporale.\n",
+    "   * **Teleport:** Salto istantaneo di coordinate (attacco cinematico).\n",
+    "   * **Ghost Ship:** Inversione completa della rotta ($180^\\circ$) con aggiunta di jitter. Questo è difficilissimo da rilevare perché la velocità rimane normale, ma la nave sta andando dalla parte opposta!\n",
+    "\n",
+    "4. **Conclusione:** Il sistema classifica una traiettoria come \"Attacco\" se anche solo uno dei due punteggi supera la sua soglia specifica (calibrata statisticamente sui dati puliti). Questo approccio \"OR logico\" garantisce che nessun tipo di anomalia possa sfuggire.\n",
+    "   \n"
    ]
   },
   {
@@ -889,6 +1095,48 @@
     "plt.title(\"Rilevamento Anomalie (Doppio Giudice Ottimizzato)\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bc0ccba",
+   "metadata": {},
+   "source": [
+    "### Stress-Test Totale\n",
+    "Invece di testare su piccoli campioni, lanciamo una simulazione su larga scala processando oltre 200.000 traiettorie (equivalenti a mesi di traffico reale).\n",
+    "\n",
+    "1. **Metodologia dello Stress-Test**\n",
+    "\n",
+    "   * **Accumulo Dati:** Carichiamo un enorme volume di dati dal test set (100 batch completi) per avere significatività statistica.\n",
+    "\n",
+    "   * **Iniezione Multi-Vettoriale:** Dividiamo questo dataset in 5 gruppi uguali:\n",
+    "\n",
+    "     1. **Traffico Normale:** Per verificare i falsi allarmi.\n",
+    "\n",
+    "     2. **Speed Spoofing:** Attacchi alla velocità.\n",
+    "\n",
+    "     3. **Teleport (GPS):** Salti di posizione impossibili.\n",
+    "\n",
+    "     4. **Ghost Ship:** Navi che trasmettono una rotta falsa (inversa).\n",
+    "\n",
+    "     5. **Silent Drift (Nuovo):** Il nuovo attacco insidioso, una deriva lenta e costante che simula il trascinamento dell'ancora o il dirottamento stealth.\n",
+    "\n",
+    "2. **Esecuzione del \"Doppio Giudice\":** \n",
+    "Tutte le 200.000 navi vengono passate attraverso il nostro sistema ibrido (LNN + Fisica). Le soglie calibrate (**THRESH_DYN, THRESH_PHYS**) decidono automaticamente chi è buono e chi è cattivo.\n",
+    "\n",
+    "3. **Analisi dei Risultati:** Il codice genera un report dettagliato per ogni minaccia:\n",
+    "\n",
+    "    * **Detection Rate:** Qual è la percentuale di attacchi bloccati per ogni categoria? (Target: >95%)\n",
+    "\n",
+    "    * **False Positive Rate:** Quante navi oneste sono state bloccate per errore? (Target: <5%)\n",
+    "\n",
+    "4. **Visualizzazione Cluster (4 Quadranti):** Il grafico finale riassume l'intero progetto in un'unica immagine:\n",
+    "\n",
+    "    * L'asse X è l'incoerenza fisica (Teletrasporto).\n",
+    "\n",
+    "    * L'asse Y è l'incoerenza dinamica (Manovre impossibili).\n",
+    "\n",
+    "Ogni tipo di attacco dovrebbe occupare una regione specifica del grafico, ben lontana dalla \"Zona Sicura\" dove risiede il traffico normale. Essendo i cluster ben separati, il sistema è un successo.\n"
    ]
   },
   {
