--- a/Progetto/LNN_V2/Test_Kinematic_Inconcistency.ipynb
+++ b/Progetto/LNN_V2/Test_Kinematic_Inconcistency.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "befe1388",
+   "metadata": {},
+   "source": [
+    "## Test Kinematic Inconsistency\n",
+    "Questo blocco di codice iniziale serve come piattaforma di configurazione e caricamento per la valutazione dell'efficacia del modello LNN nel rilevare attacchi cinematici.\n",
+    "\n",
+    "1. **Preparazione degli Strumenti Analitici e di Misurazione.**\n",
+    "    Il codice importa un set di librerie focalizzate sulla valutazione della performance dove troviamo le metriche standard di machine learning.\n",
+    "\n",
+    "2. **Ottimizzazione e Caricamento dei Componenti.**\n",
+    "   Viene eseguita l'ottimizzazione dell'hardware (GPU e Mixed Precision) per garantire che la fase di test sia rapida ed efficiente.\n",
+    "   \n",
+    "3. **Definizione del Contesto Operativo.**\n",
+    "   Vengono riconfermati i parametri strutturali del modello (WINDOW_SIZE, BATCH_SIZE e le quattro feature dinamiche) e, crucialmente, viene identificato il set di File di Test.  \n",
+    "   \n",
+    "   Questi file sono la base sperimentale. Su queste traiettorie originali (mai viste dal modello), verrà iniettato l'attacco cinematico. Il modello, che è stato addestrato solo sulla normalità, elaborerà queste traiettorie alterate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "62e92c6d",
@@ -58,6 +78,15 @@
     "BOTTLENECK_SIZE = 64\n",
     "\n",
     "print(\"Configurazione Kinematic Test completata.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f267fb41",
+   "metadata": {},
+   "source": [
+    "####  Definizione delle Funzioni del Data Generator\n",
+    "Questo blocco definisce le due funzioni essenziali per trasformare i dati grezzi in sequenze pronte per il modello, mantenendo un'alta efficienza in termini di memoria (RAM)"
    ]
   },
   {
@@ -138,6 +167,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "098a1cff",
+   "metadata": {},
+   "source": [
+    "### Ricostruzione del Modello e Preparazione Pipeline Dati\n",
+    "In questa fase operativa, ripristiniamo l'intelligenza artificiale addestrata e prepariamo il flusso di dati per il test. Poiché stiamo lavorando con layer custom (ncps), la procedura è divisa in tre step precisi:\n",
+    "\n",
+    "1. **Caricamento dello Scaler**: Carichiamo lo `scaler.joblib` originale. È vitale usare esattamente la stessa media e deviazione standard del training. \n",
+    "\n",
+    "2. **Ricostruzione dell'Architettura LNN:** Poiché abbiamo salvato solo i pesi, dobbiamo prima ridefinire lo \"scheletro\" della rete:\n",
+    "\n",
+    "3. **Attivazione del Generatore di Test:** Istanziamo test_gen sui file selezionati (TEST_FILES).\n",
+    "\n",
+    "   * Impostiamo `shuffle_files=False` per garantire che i dati arrivino in ordine sequenziale, permettendoci di iniettare l'attacco su traiettorie specifiche e monitorare l'effetto fotogramma per fotogramma."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "f3f8e663",
@@ -186,6 +232,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e15b9ddd",
+   "metadata": {},
+   "source": [
+    "### Funzione di Attacco Cinematico\n",
+    "La funzione `apply_kinematic_attack `prende un batch di traiettorie normali e introduce un'anomalia istantanea, creando un'incoerenza fisica tra la posizione dichiarata e i parametri di movimento dinamico della nave.\n",
+    "Un attacco cinematico simula un errore o una manipolazione nel segnale GPS/AIS (Automatic Identification System) della nave. L'attacco non modifica la rotta o la velocità in modo graduale e realistico, ma introduce una discontinuità istantanea nella posizione. Il modello LSTM Autoencoder è stato addestrato per apprendere proprio questa relazione fisica coerente. Quando la rete vede una posizione che \"salta\" senza che la velocità e la rotta cambino in modo corrispondente, l'errore di ricostruzione sarà altissimo.\n",
+    "La funzione crea l'attacco agendo direttamente sui dati normalizzati:\n",
+    "\n",
+    "1. **Copia e Inizio Attacco:** La funzione crea una copia dei dati puliti `(batch_clean.copy())` per non alterare l'originale. L'attacco viene fatto partire dal timestep 15 `(attack_start_idx)`, ovvero a metà della finestra temporale di 30 step.\n",
+    "\n",
+    "2. **Iniezione del Salto di Posizione:**\n",
+    "   * `batch_attacked[:, attack_start_idx:, 0] += shift_magnitude`(Latitudine) \n",
+    "   * `batch_attacked[:, attack_start_idx:, 1] += shift_magnitude` (Longitudine)\n",
+    "      * Questo è il cuore dell'attacco: Viene aggiunto un offset costante `shift_magnitude` a tutti i punti successivi al timestep 15. Questo crea un **\"gradino\"** istantaneo nel segnale della posizione, simulando un teletrasporto della nave.\n",
+    "\n",
+    "3. **Incoerenza Vettoriale:** La parte cruciale dell'attacco è che i parametri dinamici (Velocità $\\text{SOG}$ e Rotta $\\text{COG}$, indici 2 e 3) non vengono modificati.\n",
+    "\n",
+    "L'output della funzione è un batch di traiettorie che mostrano: posizione saltata $\\cap$ dinamica inspiegabilmente coerente, creando esattamente l'anomalia che il modello LNN è stato addestrato a riconoscere."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "7c881d23",
@@ -218,6 +286,15 @@
     "    \n",
     "    return batch_attacked\n",
     "print(\"Funzione di attacco definita.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afda57be",
+   "metadata": {},
+   "source": [
+    "### Creazione del dataset misto\n",
+    "E' stato scelto di attaccare metà dataset."
    ]
   },
   {
@@ -271,6 +348,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed9fa16f",
+   "metadata": {},
+   "source": [
+    "### Calcolo degli Errori di Rilevamento\n",
+    "Si sottopone il modello addestrato ai dati contenenti l'attacco cinematico. Come metrica chiave calcoliamo il $\\text{MAE}$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "059a9816",
@@ -294,6 +380,19 @@
     "mae_per_sample = np.mean(np.abs(X_test_mixed - reconstructions), axis=(1, 2))\n",
     "\n",
     "print(f\"Calcolo errori completato\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b402fe4",
+   "metadata": {},
+   "source": [
+    "### Istogramma Comparativo\n",
+    "In questo grafico confrontiamo le distribuzioni dell'errore (MAE) per i due gruppi di traiettorie: quelle normali (verdi) e quelle attaccate (rosse).\n",
+    "\n",
+    "  * **Dati Normali (Verde)**: Si osserva un picco molto stretto e alto vicino a MAE 0.00. Questo conferma che il modello LNN ricostruisce le traiettorie fisicamente coerenti con estrema precisione. La coda della distribuzione verde si esaurisce rapidamente, indicando che raramente commette errori significativi su dati leciti.\n",
+    "\n",
+    "  * **Dati Attaccati (Rosso)**: La distribuzione rossa è nettamente spostata verso destra, con un picco intorno a **MAE 0.8.** Questo valore è enormemente più alto dell'errore normale. Questo perchè quando la rete prova a ricostruire il \"salto impossibile\", fallisce miseramente perché la sua memoria liquida non permette cambiamenti di stato istantanei. Questo fallimento genera un errore massiccio.\n"
    ]
   },
   {
@@ -330,6 +429,29 @@
     "plt.ylabel(\"Conteggio\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "928c6e3c",
+   "metadata": {},
+   "source": [
+    "### Valutazione Quantitativa e Matrice di Confusione\n",
+    "1. **Definizione della Soglia** ($3\\sigma$ Rule): Calcoliamo la soglia di allarme basandoci solo sui dati normali. Utilizziamo la regola statistica: $\\text{Threshold} = \\mu + 3\\sigma$. Questo significa che impostiamo l'asticella così in alto che solo lo 0.3% dei dati normali potrebbe superarla per errore. È una scelta conservativa per minimizzare i falsi allarmi. Il **TRESHOLD** è di $\\mathbf{0.0527}$\n",
+    "\n",
+    "2. **Classificazione e Calcolo delle Metriche**\n",
+    "   * Viene eseguita la classificazione binaria: se l'errore $\\text{MAE}$ del campione supera la **THRESHOLD**, il sistema predice un Attacco (1); altrimenti, predice Normale (0).\n",
+    "   * **Metriche Calcolate:** \n",
+    "     * $\\mathbf{Accuracy} \\approx 0.9972$ (99.72% di tutte le classificazioni sono corrette).\n",
+    "     * $\\mathbf{Precision} \\approx 0.9944$ (Quando il modello dice \"Attacco\", ha ragione nel 99.44% dei casi).\n",
+    "     * $\\mathbf{Recall} = 1.0000$ (Il modello ha trovato il 100% di tutti gli attacchi reali presenti nel set).\n",
+    "     * $\\mathbf{F1-Score} \\approx 0.9972$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
+    "\n",
+    "3. **Analisi della Matrice di Confusione**\n",
+    "   * **True Positives (128,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco cinematico.\n",
+    "   * **True Negatives (127,280):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
+    "   * **False Negatives (0):** Non c'è stato nessun falso negativo. \n",
+    "   * **False Positives (720):** Ci sono stati solo 720 falsi positivi"
    ]
   },
   {
@@ -391,6 +513,22 @@
     "plt.ylabel(\"Vero\")\n",
     "plt.xlabel(\"Predetto\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abac13da",
+   "metadata": {},
+   "source": [
+    "### Visualizzazione di un singolo attacco\n",
+    "Il codice estrae un campione specifico di traiettoria a cui è stato applicato l'attacco cinematico e traccia su un grafico 2D (Latitudine vs Longitudine) sia l'input manipolato che il tentativo del modello di ricostruirlo.\n",
+    "\n",
+    "**Analisi del grafico:**\n",
+    "   * **Input Attaccato (Linea Blu):** La traiettoria è una linea retta diagonale enorme e innaturale. Questo è il \"salto netto\" o teletrasporto. La nave si sposta di centinaia di chilometri in pochi minuti, violando palesemente le leggi della fisica (un cambio di posizione senza velocità adeguata).\n",
+    "\n",
+    "   * **Ricostruzione del Modello (Linea Rossa):** Il modello non riesce a replicare il salto perchè quando l'Encoder riceve il salto impossibile, il Decoder tenta di generare una sequenza che sia fisicamente plausibile e simile a quelle viste nel training. Non potendo \"teletrasportarsi\", la LNN collassa e produce una ricostruzione locale, ignorando totalmente la vasta escursione dell'input.\n",
+    "\n",
+    "   * **Risultato**: La discrepanza tra la linea blu (input impossibile) e la linea rossa (fisica appresa) è gigantesca. Questa differenza genera l'errore di ricostruzione elevatissimo (MAE > 0.7) che fa scattare l'allarme."
    ]
   },
   {
