--- a/Progetto/LNN_V2/Test_Silent_Drift.ipynb
+++ b/Progetto/LNN_V2/Test_Silent_Drift.ipynb
@@ -1,8 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "40f54ade",
+   "metadata": {},
+   "source": [
+    "## Test Silent Drift\n",
+    "Questo blocco di codice iniziale serve come piattaforma di configurazione e caricamento per la valutazione dell'efficacia del modello LNN nel rilevare attacchi Silent Drift.\n",
+    "\n",
+    "1. **Preparazione degli Strumenti Analitici e di Misurazione.**\n",
+    "    Il codice importa un set di librerie focalizzate sulla valutazione della performance dove troviamo le metriche standard di machine learning.\n",
+    "\n",
+    "2. **Ottimizzazione e Caricamento dei Componenti.**\n",
+    "   Viene eseguita l'ottimizzazione dell'hardware (GPU e Mixed Precision) per garantire che la fase di test sia rapida ed efficiente.\n",
+    "   \n",
+    "3. **Definizione del Contesto Operativo.**\n",
+    "   Vengono riconfermati i parametri strutturali del modello (WINDOW_SIZE, BATCH_SIZE e le quattro feature dinamiche) e, crucialmente, viene identificato il set di File di Test.\n",
+    "   Questi file sono la base sperimentale. Su queste traiettorie originali (mai viste dal modello), verrà iniettato l'attacco SIlent Drift. Il modello, che è stato addestrato solo sulla normalità, elaborerà queste traiettorie alterate."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cbc6a33d",
    "metadata": {},
    "outputs": [
@@ -57,7 +76,7 @@
     "RECURRENT_UNITS = 128\n",
     "BOTTLENECK_SIZE = 64\n",
     "\n",
-    "print(\"Configurazione Kinematic Test completata.\")"
+    "print(\"Configurazione Silent Drift Test completata.\")"
    ]
   },
   {
@@ -200,6 +219,26 @@
     "model.load_weights(WEIGHTS_PATH)\n",
     "print(\"Pesi LNN caricati.\")\n",
     "test_gen = data_generator_v(TEST_FILES, scaler, COLONNE_FEATURES, WINDOW_SIZE, BATCH_SIZE, shuffle_files=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74ce785d",
+   "metadata": {},
+   "source": [
+    "### Funzione attacco Silent Drift\n",
+    "La funzione `apply_silent_drift_attack` implementa un tipo di attacco che manipola la posizione di una nave introducendo un errore cumulativo e graduale (una \"deriva\") nel segnale GPS/AIS.\n",
+    "L'attacco Silent Drift cerca di mascherare la manipolazione inducendo una deriva lenta e costante della posizione dichiarata ($\\text{Latitudine}$ e $\\text{Longitudine}$) mentre i parametri dinamici interni ($\\text{Velocità}$ e $\\text{Rotta}$) rimangono inalterati. Poiché il cambiamento è graduale ad ogni timestep, il modello LNN (e i sistemi di navigazione tradizionali) potrebbe impiegare più tempo ad accorgersi dell'incoerenza. Tuttavia, la mancanza di giustificazione cinematica (la deriva non è accompagnata da un cambio di velocità o rotta) alla fine espone la manipolazione.\n",
+    "\n",
+    "La funzione `apply_silent_drift_attack` genera questo attacco introducendo un offset crescente in $\\text{Latitudine}$ e $\\text{Longitudine}$:\n",
+    "  1. **Copia e Tasso di Deriva:** Viene creata una copia del batch pulito `(batch_clean)`. Il parametro `drift_rate` ne definisce l'intensità per ogni timestep.\n",
+    "  2. **Creazione del Vettore di Drift:**\n",
+    "      * `steps = np.arange(batch_clean.shape[1])`: Crea una sequenza numerica da $0$ a $29$ (i 30 timestep della finestra).\n",
+    "      * `drift_vector = steps * drift_rate`: Questo crea un vettore in cui l'offset è cumulativo: è $0$ al primo timestep, $0.05$ al secondo, $0.10$ al terzo, e così via, simulando una deriva progressiva.\n",
+    "  3. **Iniezione della Deriva:** \n",
+    "      * $\\text{batch\\_attacked}[:, :, 0] += \\text{drift\\_vector}$ ($\\text{Latitudine}$)\n",
+    "      * $\\text{batch\\_attacked}[:, :, 1] += \\text{drift\\_vector}$ ($\\text{Longitudine}$)\n",
+    "      * **Effetto:** Il codice applica questo vettore di deriva crescente a tutti i punti della traiettoria per simulare una deriva diagonale costante (verso Nord-Est in questo caso).\n"
    ]
   },
   {
@@ -349,7 +388,7 @@
     "\n",
     " * Sebbene l'errore sia inferiore (poiché la deriva è graduale), il modello è stato comunque in grado di rilevare l'incoerenza. La distanza tra la curva verde e la curva rossa è ampia, indicando che la differenziabilità è eccellente.\n",
     "\n",
-    "**Calcolo della Soglia Statistica**, che risulta essere uguale a $\\mathbf{0.1385}$\n"
+    "**Calcolo della Soglia Statistica**, che risulta essere uguale a $\\mathbf{0.0354}$\n"
    ]
   },
   {
@@ -404,16 +443,16 @@
     "1. **Classificazione e Calcolo delle Metriche**\n",
     "   * Viene eseguita la classificazione binaria: se l'errore $\\text{MAE}$ del campione supera la **THRESHOLD**, il sistema predice un Attacco (1); altrimenti, predice Normale (0).\n",
     "   * **Metriche Calcolate:** \n",
-    "     * $\\mathbf{Accuracy} \\approx 0.9937$ (99.37% di tutte le classificazioni sono corrette).\n",
-    "     * $\\mathbf{Precision} \\approx 0.9875$ (Quando il modello dice \"Attacco\", ha ragione nel 98.75% dei casi).\n",
+    "     * $\\mathbf{Accuracy} \\approx 0.9940$ (99.40% di tutte le classificazioni sono corrette).\n",
+    "     * $\\mathbf{Precision} \\approx 0.9881$ (Quando il modello dice \"Attacco\", ha ragione nel 98.81% dei casi).\n",
     "     * $\\mathbf{Recall} = 1.0000$ (Il modello ha trovato il 100% di tutti gli attacchi reali presenti nel set).\n",
-    "     * $\\mathbf{F1-Score} \\approx 0.9937$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
+    "     * $\\mathbf{F1-Score} \\approx 0.9940$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
     "\n",
     "2. **Analisi della Matrice di Confusione**\n",
-    "   * **True Positives (320,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco Silent Drift.\n",
-    "   * **True Negatives (315,939):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
+    "   * **True Positives (128,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco Silent Drift.\n",
+    "   * **True Negatives (126,462):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
     "   * **False Negatives (0):** Non c'è stato nessun falso negativo. \n",
-    "   * **False Positives (4,061):** Ci sono stati 4,061 falsi positivi (traiettorie normali classificate erroneamente come attacco). Questo corrisponde allo $\\mathbf{0.63\\%}$ dei campioni normali, in linea con l'aspettativa statistica di una soglia $3\\sigma$ (dove si aspetta che circa lo $0.3\\%$ cada fuori)."
+    "   * **False Positives (1,538):** Ci sono stati 1,538 falsi positivi (traiettorie normali classificate erroneamente come attacco)."
    ]
   },
   {
@@ -468,11 +507,11 @@
    "metadata": {},
    "source": [
     "#### Visualizzazione di un singolo attacco\n",
-    "Questo blocco di codice conclude l'analisi visualizzando il risultato dell'attacco Silent Drift in uno spazio tridimensionale che include il tempo. L'obiettivo è mostrare in modo intuitivo come il modello LSTM reagisce all'errore di deriva graduale.\n",
+    "Questo blocco di codice conclude l'analisi visualizzando il risultato dell'attacco Silent Drift in uno spazio tridimensionale che include il tempo. L'obiettivo è mostrare in modo intuitivo come il modello LNN reagisce all'errore di deriva graduale.\n",
     "\n",
     "1. **Preparazione all'esperimento**\n",
     "   * **Iniezione Attacco:** Una singola traiettoria pulita viene estratta e l'attacco Silent Drift viene applicato, introducendo una deriva progressiva (la posizione si sposta costantemente e in modo crescente nel tempo).\n",
-    "   * **Inferenza:** Il modello LSTM Autoencoder esegue la predizione sulla sequenza alterata per produrre la ricostruzione `(traj_recon)`.\n",
+    "   * **Inferenza:** Il modello LNN esegue la predizione sulla sequenza alterata per produrre la ricostruzione `(traj_recon)`.\n",
     "\n",
     "2. **Visualizzazione 3D (Spazio + Tempo)**\n",
     "   * **La linea blu rappresenta l'Input (Deriva Costante)**. Nello spazio 3D, appare come una linea retta quasi perfetta che si muove uniformemente nello spazio mentre il tempo (asse $Z$) avanza. Questa traiettoria è cinematicamente impossibile perché non c'è nessun cambio di velocità o rotta che giustifichi un movimento di deriva così coerente e costante rispetto a dove la nave dovrebbe essere. \n",
