Correzione celle notebook e del README

--- a/Progetto/LNN_V2/Test.ipynb
+++ b/Progetto/LNN_V2/Test.ipynb
@@ -1119,7 +1119,7 @@
     "\n",
     "     4. **Ghost Ship:** Navi che trasmettono una rotta falsa (inversa).\n",
     "\n",
-    "     5. **Silent Drift (Nuovo):** Il nuovo attacco insidioso, una deriva lenta e costante che simula il trascinamento dell'ancora o il dirottamento stealth.\n",
+    "     5. **Silent Drift:** Una deriva lenta e costante che simula il trascinamento dell'ancora o il dirottamento stealth.\n",
     "\n",
     "2. **Esecuzione del \"Doppio Giudice\":** \n",
     "Tutte le 200.000 navi vengono passate attraverso il nostro sistema ibrido (LNN + Fisica). Le soglie calibrate (**THRESH_DYN, THRESH_PHYS**) decidono automaticamente chi è buono e chi è cattivo.\n",
